--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,21 @@
 .crocjohnson{
     transition: 3s;
 }
+
+.my-bg-celeste{
+    background-color: #12aac5;
+}
+
+.my-bg-white{
+    background-color: rgba(255, 255, 255, 0.836);
+    border-radius: 300px;
+}
+.my-bg-calcio{
+    background-image: url(../img/campoCalcio.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 1200px;
+}
 /* Animazione */
 
 @keyframes enter-croc {
